--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body{
             margin-right: 40px;
             padding: 1.5em 0.7em;
             border-radius: 50%;
-            margin-top: 1.50em;
+            margin-top: 1.6em;
             position: absolute;
             z-index: 20;
         }
@@ -92,6 +92,7 @@ body{
             color: #061151;
             text-align: 700;
             font-family: "Lilita One", serif;
+            font-size: 1em;
         }
 
         .regalo{
@@ -108,7 +109,7 @@ body{
 
         .detalle{
             background-color: #FFA405;
-            margin: 0em 13em 0em 13em;
+            margin: 0em 13em;
             border-radius: 10px;
             position: absolute;
             z-index: 20;
@@ -397,9 +398,9 @@ body{
     }
 
         .oferta{
-            margin-left: 271px;
-            margin-right: 40px;
-            padding: 1.5em 0.7em;
+            margin-left: 257px;
+            margin-right: 0px;
+            padding: 1.2em 0.5em;
         }
 
         .oferta p{
@@ -411,12 +412,12 @@ body{
         }
 
         .detalle{
-            margin: 0em 2.5em;
+            width: 100%;
+            margin: 0em 1em;
         }
 
         .detalle p{
-            padding: 0.5em 8em;
-            margin: 0em;
+            padding: 0.5em;
         }
 
     .contenedor3{
