--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,22 @@ body{
 .contenedor{
     position: relative;
     font-family: "Kumbh Sans", serif;
+    background: rgb(240, 213, 213);
 }
     /*NAVEGADOR*/
     .contenedor1{
         align-content: center;
-        border-bottom: 2px solid #61EDFC;
         position: absolute;
-        z-index: 1;
+        z-index: 2;
         display: grid;
-        grid-template-columns: 15% 75% 10%;
-        width: 90%;
-        margin: 0em 4em;
+        grid-template-columns: 15% 70% 3% 3% 3% 3% 3%;
+        width: 95%;
+        padding: 0em 0em 0em 4em;
     }
 
         .contenedor1 .logo{
-            padding: 0em 1em 0em 1.5em;
-            width: 84px;
+            padding: 0.4em 1em 0em 5.5em;
+            width: 48px;
             text-align: center;
         }
 
@@ -36,6 +36,7 @@ body{
             text-align: center;
             padding: 0em 1.5em;
             color: #061151;
+            font-size: 1.4em;
         }
 
         .raya li > a{
@@ -46,26 +47,27 @@ body{
         }
 
         .raya{
-            padding: 1em 0em 4em 0em;
+            padding: 1em 0em 1em 0em;
         }
 
         .raya:hover{
             border-bottom: 4px solid #061151;
         }
 
-        .telefono{
-            align-content: center;
-            text-align: center;
-            background-color: #61EDFC;
-            color: #061151;
-            font-weight: 700;
-            margin: 2em 0em;
-            border-radius: 20px;
+        .telefono2 img{
+            width: 40px;
         }
 
-        .telefono a{
-            text-decoration: none;
-        }
+    .portada{
+        text-align: center;
+        width: 100%;
+    }
+
+    .portada img{
+        width: 100%;
+    }
+
+
 
     /* LISTA */
     .contenedor2{
@@ -73,10 +75,11 @@ body{
         z-index: 10;
         background-color: white;
         font-family: "Kumbh Sans", serif;
-        top: 8em;
+        top: 38em;
         left: 0px;
         width: 100%;
         display: grid;
+        background: rgb(240, 213, 213);
     }
     
         .oferta{
@@ -130,7 +133,7 @@ body{
     .contenedor3{
         display: grid;
         grid-template-columns: 50% 50%;
-        padding-top: 10em;
+        padding-top: 6em;
     }
 
         .imagenes{
@@ -360,7 +363,7 @@ body{
     
 
     .contenedor1{
-        grid-template-columns: 15% 75% 10%;
+        grid-template-columns: 15% 50% 6% 6% 6% 6% 6%;
         width: 100%;
         border: none;
         padding: 1em 0em;
@@ -396,27 +399,65 @@ body{
             padding: 0em 1em;
         }
 
-        .telefono{
+        .telefono2{
             order: 3;
-            align-content: start;
-            margin-right: 2em;
-            margin-left: -9em;
-            margin-top: 1em;
-            padding: 0.3em 0em;
         }
 
-        .telefono a{
-            text-decoration: none;
+        .telefono2 img{
+            width: 24px;
+        }
+
+        .whatsapp2{
+            order: 4;
+        }
+
+        .whatsapp2 img{
+            width: 24px;;
+        }
+
+        .tiktok{
+            order: 5;
+        }
+
+        .tiktok img{
+            width: 24px;
+        }
+
+        .facebook{
+            order: 6;
+        }
+
+        .facebook img{
+            width: 24px;
+        }
+
+        .instagram{
+            order: 7;
+        }
+
+        .instagram img{
+            width: 24px;
+        }
+
+        .portada{
+            width: 100%;
+        }
+
+        .portada img{
+            height: 180px;
+            width: 100%;
         }
 
     .contenedor2{
-        margin-top: -3em;
+        margin-top: -27em;
+        width: 100%;
     }
 
         .oferta{
             margin-left: 257px;
             margin-right: 0px;
             padding: 1.2em 0.5em;
+
         }
 
         .oferta p{
@@ -459,7 +500,7 @@ body{
         .regreso_lista{
             text-align: end;
             position: absolute;
-            top: 560px;
+            top: 700px;
             left: 220px;
         }
 
@@ -589,7 +630,7 @@ body{
         .sombra{
             background-color: hsl(0, 0%, 0%);
             opacity: 0.8;
-            top: -57em;
+            top: -70em;
             left: 0em;
             width: 375px;
             height: 1180vh;
